--- a/traitement_image/ar_tag/CMakeLists.txt
+++ b/traitement_image/ar_tag/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   ar_track_alvar
+  ar_track_alvar_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -95,7 +96,6 @@ catkin_package(
 # include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
-
 )
 
 ## Declare a cpp library
@@ -104,22 +104,30 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-add_executable(ar_tag_msg_node src/subscriber.cpp)
-add_executable(ar_tag_srv_node src/artag_srv_node.cpp)
+add_executable(ar_tag_msg_node 
+    src/subscriber.cpp
+    )
+target_link_libraries(ar_tag_msg_node
+    ${catkin_LIBRARIES}
+    )
+
+
+add_executable(ar_tag_srv_node 
+    src/artag_srv_node.cpp
+    )
+add_dependencies(ar_tag_srv_node
+    trait_im_msg_gencpp
+    )
+target_link_libraries(ar_tag_srv_node
+    ${catkin_LIBRARIES}
+    )
+set_target_properties(ar_tag_srv_node 
+    PROPERTIES COMPILE_FLAGS "-std=c++0x -g3"
+    )
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(ar_tag_node ar_tag_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
- target_link_libraries(ar_tag_msg_node
-   ${catkin_LIBRARIES}
- )
-add_dependencies(ar_tag_srv_node trait_im_msg_gencpp)
- target_link_libraries(ar_tag_srv_node
-   ${catkin_LIBRARIES}
- )
-set_target_properties(ar_tag_srv_node PROPERTIES COMPILE_FLAGS "-std=c++0x -g3")
 #############
 ## Install ##
 #############
