Simulateur, premiere version : 	* Ajout d'un tf_broadcaster 	* Modification du gazebo_to_ros pour avoir les vitesses sur odom et travailler avec les bons reperes 	* Ajout d'un pkg contenant les launchfiles et les worlds pour lancer la simulation gazebo

--- a/simulation/gazebo_to_ros/CMakeLists.txt
+++ b/simulation/gazebo_to_ros/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 2.8.3)
 project(gazebo_to_ros)
 
 ## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   gazebo_ros
   nav_msgs
@@ -12,20 +10,10 @@ find_package(catkin REQUIRED COMPONENTS
 # Depend on system install of Gazebo
 find_package(gazebo REQUIRED)
 
-## System dependencies are found with CMake's conventions
-find_package(Boost REQUIRED COMPONENTS system filesystem regex)
-
-find_package(Protobuf REQUIRED)
-
 ###################################
 ## catkin specific configuration ##
 ###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if you package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
+
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES robotino3_gazebo
@@ -40,24 +28,15 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-  include
-  ${GAZEBO_INCLUDE_DIRS}
-  ${Boost_INCLUDE_DIRS}
-  ${PROTOBUF_INCLUDE_DIRS}
-  )
+    include
+    ${GAZEBO_INCLUDE_DIRS}
+)
 
 ## Declare a cpp executable
 add_executable(gazebo_to_ros_node 
-  src/gazebo_to_ros_node.cpp)
-
-## Add cmake target dependencies of the executable/library
-add_dependencies(gazebo_to_ros_node 
-  robotino3_gazebo_generate_messages_cpp)
-
-## Specify libraries to link a library or executable target against
+    src/gazebo_to_ros_node.cpp
+)
 target_link_libraries(gazebo_to_ros_node
-  ${catkin_LIBRARIES}
-  ${GAZEBO_LIBRARIES}
-  ${Boost_LIBRARIES}
-  ${PROTOBUF_LIBRARIES}
+    ${catkin_LIBRARIES}
+    ${GAZEBO_LIBRARIES}
 )
