--- a/navigation/approche_finale/package.xml
+++ b/navigation/approche_finale/package.xml
@@ -51,7 +51,11 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>manager_msg</build_depend>
-  
+  <build_depend>ar_track_alvar</build_depend>
+  <build_depend>ar_track_alvar_msgs</build_depend>  
+  <build_depend>trait_im_msg</build_depend>
+  <build_depend>nav_msgs</build_depend>
+ 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib_msgs</run_depend>
@@ -62,6 +66,10 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>manager_msg</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
+  <run_depend>ar_track_alvar_msgs</run_depend>
+  <run_depend>trait_im_msg</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
