ordres de la RefBox en cours

--- a/messages/comm_msg/CMakeLists.txt
+++ b/messages/comm_msg/CMakeLists.txt
@@ -61,7 +61,8 @@ add_message_files(
 	Robot.msg
 	RobotInfo.msg
     activity.msg
-
+	Order.msg
+	OrderInfo.msg
 )
 
 ## Generate services in the 'srv' folder
