--- a/messages/approche_finale_msg/package.xml
+++ b/messages/approche_finale_msg/package.xml
@@ -46,6 +46,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
