Path Tracker en C++ + action

--- a/navigation/path_tracker/package.xml
+++ b/navigation/path_tracker/package.xml
@@ -17,13 +17,23 @@
   
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>actionlib</build_depend>
+  <build_depend>deplacement_msg</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>robotino_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>geometry_messages</build_depend>
-  <build_depend>turtlesim</build_depend>
+  <build_depend>pathfinder</build_depend>
 
+  <run_depend>actionlib</run_depend>
+  <run_depend>deplacement_msg</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>robotino_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>geometry_messages</run_depend>
-  <run_depend>turtlesim</run_depend>
+  <run_depend>pathfinder</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
