--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ brefore_install:
 install:
 - sudo apt-get update -qq
 - sudo apt-get install --yes doxygen graphviz
-script :
-- echo "BUILDING : Do strictly nothing for this time"
+script : gcc -v
 after_success:
 - ./ci-travis/publish-doxygen.sh
 
