--- a/common/occupancy_grid_utils/package.xml
+++ b/common/occupancy_grid_utils/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>path_finder</name>
+  <name>occupancy_grid_utils</name>
   <version>0.0.0</version>
-  <description>The path_finder package</description>
+  <description>The occupancy_grid_utils package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
+  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="vincent@todo.todo">vincent</maintainer>
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/path_finder</url> -->
+  <!-- <url type="website">http://wiki.ros.org/occupancy_grid_utils</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -45,18 +45,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>actionlib</build_depend>
-  <build_depend>actionlib_msgs</build_depend>
-  <build_depend>occupancy_grid_utils</build_depend>
-
   <run_depend>geometry_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-  <run_depend>actionlib</run_depend>
-  <run_depend>actionlib_msgs</run_depend>
-  <run_depend>occupancy_grid_utils</run_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
