--- a/navigation/path_finder/CMakeLists.txt
+++ b/navigation/path_finder/CMakeLists.txt
@@ -53,12 +53,11 @@ find_package(catkin REQUIRED COMPONENTS
 #   Message2.msg
 # )
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+# Generate services in the 'srv' folder
+add_service_files(
+  FILES
+  GeneratePath.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,11 +66,13 @@ find_package(catkin REQUIRED COMPONENTS
 #   Action2.action
 # )
 
-## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs#   nav_msgs#   std_msgs
-# )
+# Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  geometry_msgs
+  nav_msgs
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -148,7 +149,7 @@ add_executable(path_finder_node
     src/path_finder_node.cpp
 )
 
-set_target_properties(path_finder_node PROPERTIES COMPILE_FLAGS "-std=c++11 -g3")
+set_target_properties(path_finder_node PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -159,6 +160,34 @@ target_link_libraries(path_finder_node
     occupancy_grid_utils
     ${catkin_LIBRARIES}
 )
+
+#add_executable(closedSet_test_node
+#
+#    src/graph/Graph.cpp
+#    src/graph/GridMapGraph.cpp
+#    src/graph/UpdateGraph.cpp
+#    src/graph/UpdateGridMapGraph.cpp
+#
+#    src/search_algo/AStarSearch.cpp
+#    src/search_algo/Path.cpp
+#    src/search_algo/SearchAlgo.cpp
+#    src/search_algo/State.cpp
+#
+#    src/closedSet_test_node.cpp
+#)
+
+#set_target_properties(closedSet_test_node PROPERTIES COMPILE_FLAGS "-std=c++11 -g3")
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+# add_dependencies(closedSet_test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+#target_link_libraries(closedSet_test_node
+#    occupancy_grid_utils
+#    ${catkin_LIBRARIES}
+#)
+
 
 #############
 ## Install ##
