--- a/navigation/grid_maker/CMakeLists.txt
+++ b/navigation/grid_maker/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   deplacement_msg
+  OpenCV
 )
 
 ## System dependencies are found with CMake's conventions
@@ -100,6 +101,7 @@ catkin_package(
 include_directories(
 	include/path_finder
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
@@ -109,21 +111,28 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(construct_map_node src/Map.cpp)
+add_executable(construct_map_weighted_node src/Map_weighted.cpp)
 add_executable(construct_map_test src/Test.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 add_dependencies(construct_map_node path_finder_generate_messages_cpp deplacement_msg_gencpp)
+add_dependencies(construct_map_weighted_node path_finder_generate_messages_cpp deplacement_msg_gencpp)
 add_dependencies(construct_map_test path_finder_generate_messages_cpp deplacement_msg_gencpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(construct_map_node
  ${catkin_LIBRARIES}
-  )
-  target_link_libraries(construct_map_test
+ )
+target_link_libraries(construct_map_weighted_node
+    ${catkin_LIBRARIES}
+    ${OpenCV_LIBRARIES}
+)
+target_link_libraries(construct_map_test
  ${catkin_LIBRARIES}
-  )
+)
 
+set_target_properties(construct_map_weighted_node PROPERTIES COMPILE_FLAGS "-std=c++11")
 #############
 ## Install ##
 #############
