PullRequest#21 Prise en compte remarques Vincent

--- a/navigation/pathfinder/CMakeLists.txt
+++ b/navigation/pathfinder/CMakeLists.txt
@@ -119,9 +119,7 @@ target_link_libraries(pathfinder_node
     ${Boost_LIBRARIES}
 )
 add_dependencies(pathfinder_node pathfinder_gencpp)
-set_target_properties(pathfinder_node PROPERTIES COMPILE_FLAGS -std=c++0x)
-
-set_target_properties(pathfinder_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
+set_target_properties(pathfinder_node PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 #############
 ## Install ##
