--- a/simulation/gazebo_to_ros/package.xml
+++ b/simulation/gazebo_to_ros/package.xml
@@ -24,11 +24,17 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>trait_im_msg</build_depend>
+  <build_depend>deplacement_msg</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
+  <build_depend>tf</build_depend>
 
   <run_depend>gazebo_ros</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>trait_im_msg</run_depend>
+  <run_depend>deplacement_msg</run_depend>
+  <run_depend>gazebo_msgs</run_depend>
+  <run_depend>tf</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
