[CI-TRAVIS] Premier build automatique avec correction du build
lecture_feu : suppresion de l'include opencv-nonfree - pas nécessaire,
les modules nonfree étant commentés
grid_maker : find_package(OpenCV) séparé sur catkin_fin_package
localisation : regénération du Alarm.srv

Fix #26

Historique des commits temporaires rebased sur ce commit :

[Ci-Travis] Correction de installEnvironment.sh

Echec sur création du fichier ~/tmp existant déjà

[CI-Travis] Correction installEnvironment.sh

Mauvais source dans ~/.bashrc

[Ci-Travis] Brutforce catkin_init_workspace

[Ci-Travis] Echo $PATH

[Ci-Travis] Test

[Ci-Travis] Test catkin

Force yes

[Ci-Travis] Test complet

Suppresion sudo su

[Ci-Travis] test leger

[Ci-Travis]

[Ci-Travis] Test catkin

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] Test de build, catkin_make plante

[Ci-Travis] First working build (take 20 minute)

[Ci-Travis] Re-organised scripts - First try

[Ci-Travis] Re-organised scripts - Seconde try

[Ci-Travis] Re-organised scripts - Third try

[Ci-Travis] Enhanced color. Catkin scripted. freshInstall script

[Ci-Travis] Enhanced color on ci-travis platform

[Ci-travis] quickfix [ci-skip]

[Ci-Travis] Add branches bob* and stuart* on whitelist

[ci-skip]

Test PyroTeam user

Test user PyroTeam [ci-skip]

freshInstall.sh fix [ci-skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,24 @@
+# Work on a trusty VM
 sudo: required
 dist: trusty
+
+# Allow only devel, master and branches containing a */ci-travis/* part
 branches:
   only:
     - devel
-    - doxygen
+    - master
+    - /bob.*/
+    - /stuart.*/
+    - /.*\/ci-travis\/.*/
+
+# Allow catkin_make to be ran
+language:
+  - python
+cache:
+  - apt
+virtualenv:
+  system_site_packages: true
+
 before_install:
 - openssl aes-256-cbc
   -K $encrypted_5a8f759d85bc_key
@@ -13,10 +28,24 @@ before_install:
   -d
 - chmod 0600 ci-travis/travisci_rsa
 - cp ci-travis/travisci_rsa ~/.ssh/id_rsa
-install:
-- sudo apt-get update -qq
-- sudo apt-get install --yes doxygen graphviz
-script : gcc -v
-after_success:
-- ./ci-travis/publish-doxygen.sh
+# Check config
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/checkRequest.sh
+# Do some test (eventually)
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/test.sh
 
+install:
+# Install packages dependencies and some dependencies from source
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/installDependencies.sh
+
+# Configure environment (strongly needed for catkin)
+- source ~/.bashrc
+# Configure catkin workspace
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/installCatkinWorkspace.sh
+
+script :
+# Run catkin_make
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/build.sh
+
+after_success:
+# Deploy doxygen documentation
+- $TRAVIS_BUILD_DIR/ci-travis/scripts/publishDoxygen.sh
