--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -56,10 +56,10 @@ FILES
 )
 
 ## Generate services in the 'srv' folder
-#add_service_files(
-#  FILES
-#  Alarm.srv
-#)
+add_service_files(
+  FILES
+  Alarm.srv
+)
 
 ## Generate actions in the 'action' folder
 add_action_files(
