--- a/navigation/approche_finale/CMakeLists.txt
+++ b/navigation/approche_finale/CMakeLists.txt
@@ -5,21 +5,29 @@ project(approche_finale)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  actionlib_msgs
-  actionlib
-  sensor_msgs
-  message_runtime
-  std_msgs
-  message_generation
-  geometry_msgs
-  manager_msg
-  ar_track_alvar
-  ar_track_alvar_msgs
-  trait_im_msg
-  nav_msgs
+	roscpp
+	rospy
+	actionlib_msgs
+	actionlib
+	sensor_msgs
+	message_runtime
+	std_msgs
+	message_generation
+	geometry_msgs
+	manager_msg
+	ar_track_alvar
+	ar_track_alvar_msgs
+	trait_im_msg
+	nav_msgs
 )
+
+# Use clang++-3.6 if available
+find_program(CLANGPP clang++-3.6 HINTS /usr/local/bin /usr/bin /opt/local/bin)
+if(NOT ${CLANGPP} MATCHES "CLANGPP-NOTFOUND")
+	set(CMAKE_CXX_COMPILER ${CLANGPP})
+endif(NOT ${CLANGPP} MATCHES "CLANGPP-NOTFOUND")
+message(STATUS "Compiler : ${CMAKE_CXX_COMPILER}")
+message(STATUS "Found : ${CLANGPP}")
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -91,9 +99,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES approche_finale
-  CATKIN_DEPENDS roscpp rospy actionlib_msgs actionlib sensor_msgs geometry_msgs message_runtime std_msgs message_generation ar_track_alvar nav_msgs
+	INCLUDE_DIRS include
+	LIBRARIES approche_finale
+	CATKIN_DEPENDS roscpp rospy actionlib_msgs actionlib sensor_msgs geometry_msgs message_runtime std_msgs message_generation ar_track_alvar nav_msgs
 #  DEPENDS system_lib
 )
 
@@ -101,22 +109,42 @@ catkin_package(
 ## Build ##
 ###########
 
+# finalApproaching_node
 add_executable(finalApproaching_node 
-  src/fa_utils.cpp
-  src/laserScan.cpp
-  src/Point.cpp
-  src/Segment.cpp
-  src/finalApproaching.cpp
-  src/bumperlistener.cpp
-  src/arTagFA.cpp
-  src/odomFA.cpp
-  src/sharps.cpp
-  src/gameStateFA.cpp
-  src/finalApproaching_node.cpp)
+	src/fa_utils.cpp
+	src/laserScan.cpp
+	src/Point.cpp
+	src/Segment.cpp
+	src/finalApproaching.cpp
+	src/bumperlistener.cpp
+	src/arTagFA.cpp
+	src/odomFA.cpp
+	src/sharps.cpp
+	src/gameStateFA.cpp
+	src/finalApproaching_node.cpp)
 target_link_libraries(  finalApproaching_node  ${catkin_LIBRARIES})
 add_dependencies(  finalApproaching_node  ${manager_msg_EXPORTED_TARGETS} approche_finale_msg_gencpp comm_msg_gencpp manager_msg_gencpp)
 set_target_properties(finalApproaching_node PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
 
+
+# Mocked final approach (work on simulation, with mocked machine detection)
+add_executable(simFinalApproach_node 
+	src/simFinalApproach_node.cpp
+	src/SimFinalApproach.cpp
+	src/odomFA.cpp)
+
+target_link_libraries(simFinalApproach_node
+	${catkin_LIBRARIES})
+
+add_dependencies(simFinalApproach_node
+	deplacement_msg_gencpp
+	manager_msg_gencpp)
+
+set_target_properties(simFinalApproach_node
+	PROPERTIES COMPILE_FLAGS "-g3 -std=c++11")
+
+
+# fake_scan_cyril_node
 add_executable(fake_scan_cyril_node
 	src/fake_scan_node.cpp)
 target_link_libraries(  fake_scan_cyril_node  ${catkin_LIBRARIES})
@@ -130,8 +158,8 @@ target_link_libraries( ar_tag_reader_node ${catkin_LIBRARIES})
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
-  ${catkin_INCLUDE_DIRS}
-  include/approche_finale
+	${catkin_INCLUDE_DIRS}
+	include/approche_finale
 )
 
 ## Declare a cpp library
@@ -174,9 +202,9 @@ include_directories(
 
 ## Mark cpp header files for installation
  install(DIRECTORY include/${PROJECT_NAME}/
-   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-   FILES_MATCHING PATTERN "*.h"
-   PATTERN ".svn" EXCLUDE
+	 DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+	 FILES_MATCHING PATTERN "*.h"
+	 PATTERN ".svn" EXCLUDE
  )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
