Avancement du grid_maker : * Ajout du chargement de paramètres dans common utils   - chargement de geometry_msgs::Point et geometry_msgs::Pose2D   - chargement de segments et de rectangles   - utile pour chargement des murs et zone interdites * Ajout d'un package geometry_utils pour regrouper les code usuels de calcul geométrique (ex distance entre deux points...) * Simplification du code de dessin d'un ligne sur l'occupancy_grid * Harmonisation et correction de bug sur le dessin d'un rectangle (le dessin reste parfois mauvais, à corriger dans le futur) * Le grid_maker charge et dessine dans la map les murs, les zones interdites (limitées à des rectangles), ainsi que les machines via le topic landmarks * Développement d'un fake publisher de landmarks en python, utilisant un fichier de paramètres * Config rviz pour le path_finder et grid_maker * Ajouts de fichiers de paramètres pour les landmarks et pour la piste d'essai en d336

--- a/navigation/grid_maker/CMakeLists.txt
+++ b/navigation/grid_maker/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   deplacement_msg
   occupancy_grid_utils
   common_utils
+  geometry_utils
   OpenCV
 )
 
@@ -139,6 +140,8 @@ add_dependencies(grid_maker_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EX
 #   )
 target_link_libraries(grid_maker_node
     occupancy_grid_utils
+    geometry_utils
+    common_utils
     ${catkin_LIBRARIES}
 )
 # set_target_properties(construct_map_weighted_node PROPERTIES COMPILE_FLAGS "-std=c++11")
