--- a/common/geometry_utils/CMakeLists.txt
+++ b/common/geometry_utils/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(common_utils)
+project(geometry_utils)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  geometry_msgs
+  nav_msgs
   roscpp
   rospy
   std_msgs
-  geometry_msgs
-  occupancy_grid_utils
 )
 
 ## System dependencies are found with CMake's conventions
@@ -69,7 +69,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs
+#   geometry_msgs#   nav_msgs#   std_msgs
 # )
 
 ################################################
@@ -102,9 +102,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include include/common_utils
-#  LIBRARIES common_utils
-  CATKIN_DEPENDS roscpp rospy std_msgs
+  INCLUDE_DIRS include include/geometry_utils
+#  LIBRARIES geometry_utils
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -117,33 +117,31 @@ catkin_package(
 # include_directories(include)
 include_directories(
     include
-    include/common_utils
+    include/geometry_utils
     ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-add_library(common_utils
-  src/Parameter.cpp
+add_library(geometry_utils
+    src/geometry_utils.cpp
 )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-add_dependencies(common_utils ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(geometry_utils ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
-
-#set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
+set_target_properties(geometry_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
 
 ## Declare a C++ executable
-# add_executable(common_utils_node src/common_utils_node.cpp)
+# add_executable(geometry_utils_node src/geometry_utils_node.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(common_utils_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(geometry_utils_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(common_utils_node
+# target_link_libraries(geometry_utils_node
 #   ${catkin_LIBRARIES}
 # )
 
@@ -162,7 +160,7 @@ set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS common_utils common_utils_node
+# install(TARGETS geometry_utils geometry_utils_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -187,7 +185,7 @@ set_target_properties(common_utils PROPERTIES COMPILE_FLAGS "-std=c++11")
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_common_utils.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_geometry_utils.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
